--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -28,7 +28,7 @@ header .div1{
 	height:1.7em;
 	background-size: cover;
 	background-repeat: no-repeat;
-background-image: url('img/Logo.png');
+background-image: url('img/logo.png');
 }
 header .div2 {
 	max-width:27.85em;
