--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -1,13 +1,10 @@
 body {
-	font-size: 20px;
-	/*font-size: 1.04vw;*/
+	font-size: 21px;
 
 }
-
+/*vers4*/
 .wrapper{
 	max-width:75em;
-	/*max-width:69.3em;*/
-	/*max-width:1386px;*/
 	width: 100%;
 	margin: 0 auto;
 
@@ -15,11 +12,11 @@ body {
 
  header nav{
  	height: 4.25em;
- 	/*height: 85px;*/
  	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items:center;
+	margin:0 1em;
 }
 
 header .div1{
@@ -28,7 +25,7 @@ header .div1{
 	height:1.7em;
 	background-size: cover;
 	background-repeat: no-repeat;
-background-image: url('img/logo.png');
+	background-image: url('img/logo.png');
 }
 header .div2 {
 	max-width:27.85em;
@@ -48,35 +45,30 @@ header .div3{
 }
 header a{
 	font-size: 1em;
-	/*font-size:20px;*/
 	font-family:Lato;
 	text-decoration: none;
 	color:#292929;	
 }
  .button-trial{
-display: block;
-width:9.15em;
-/*width:183px;*/
-height: 2.55em;
-/*height: 51px;*/
-padding: 0.65em 0 0.65em;
-text-align: center;
-background: #01996D;
-border: 1px solid #01996D;
-box-sizing: border-box;
-border-radius: 4px;
-color: #FFFFFF;
+	display: block;
+	width:9.15em;
+	height: 2.55em;
+	padding: 0.65em 0 0.65em;
+	text-align: center;
+	background: #01996D;
+	border: 1px solid #01996D;
+	box-sizing: border-box;
+	border-radius: 4px;
+	color: #FFFFFF;
 
 }
 .header-main {
-	/*width: 100vw;*/
-	/*height: 100%;*/
-height: 49em;
+	height: 49em;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('img/header-main.png');
 	display: flex;
- flex-direction: row;
+ 	flex-direction: row;
     justify-content: flex-start;
     align-items: center;
    	
@@ -84,28 +76,17 @@ height: 49em;
 
 .header-main .text{
 	width:70%;
-	/*width: 100%;*/
-	/*height: 70%;*/
 	margin-top: -5em;
 	margin-left:2em;
-	display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    border: 4px solid blue;
 }
 .text .p1{
 	font-family: Georgia;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 3.25em;
-	/*	margin-top: -0.5em;*/
 	color: #01996D;
-	  border: 4px solid red;
-
 }
 .text .p2{
-	width: 21em;
-	/*height: 6.15em;*/
 	font-size: 1em;
 	line-height: 1.55em;	
 	font-family: Lato;
@@ -138,61 +119,36 @@ height: 49em;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 1em;
-	/*text-align: center;*/
 	color: #FFFFFF;
 }
 
 .First-screen{
-
-	/*height:90em;*/
-	/*width: 100%;*/
 	display: flex;
 	flex-direction: column;
-	justify-content:space-between;
-	/*align-items: flex-start;	*/
-	border: 4px solid red;
+	justify-content:center;
 }
 
 .navFirstS1{
-	/*aspect-ratio:1920/550;*/
-/*width: 100%;*/
-height: 26em;
-display: flex;
-flex-direction:rows;
-align-items: center;
-justify-content: space-between;
-margin:1.5em 1.5em;
-border: 4px solid blue;
+	height: 26em;
+	display: flex;
+	flex-direction:rows;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .divFirstS1{
-	/*aspect-ratio:1920/327;*/
-	width:100%;
-	/*height: 16.35rem;
-	height: 100%;*/
 	font-family: Lato;
-	margin-top: -1.5em;
-	justify-content: flex-start;
-	/*border: 2px solid yellow;*/
-	
+	margin:1.5em 1.5em;
 }
 .divFirstS2{
-	/*aspect-ratio:1920/327;*/
-	width:100%;
-	/*height:100%;*/
 	font-family: Lato;
-	text-align: left;
-/*	justify-content: flex-start;*/
-	/*border: 2px solid yellow;*/
-		
+	margin:1.5em 1.5em;		
 }
 .First-screen h1{
 	font-family: Georgia;
 	font-style: normal;
 	font-weight: bold;
 	font-size:2.5em;
-	/*font-size: 50px;*/
-		/*line-height: 157%;*/
 	line-height: 1.2em;
 	color: #01996D;
 	text-align: left;
@@ -208,25 +164,19 @@ border: 4px solid blue;
 	font-weight: 500;
 	font-size: 1em;
 	line-height: 1.5em;
-	/*color: #424242;*/
 }
 
 .navFirstS2{
-	/*height: 50vw;*/
-	height: 50em;
+	min-height: 50em;
 	margin:2em 1.5em;
-	/*aspect-ratio:1500/950;*/
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;	
 	
-	border: 2px solid green;
 }
 
 .navFirstS2 .div-main1,.div-main2,.div-main3{
-	/*height: 68%;*/
 	height:48em;
-/*height: 100%;*/
 	width: 28%;
 	display: flex;
 	flex-direction: column;
@@ -234,17 +184,12 @@ border: 4px solid blue;
 }
 .div-main1{
 	justify-content: flex-start;
-	/*align-self: flex-start;*/
 }
 .div-main2{
 	justify-content: flex-end;
-	/*margin:1.5rem 0;*/
-	border: 2px solid magenta;
-	/*margin-top: 35%;*/
 }
 .div-main3{
 	justify-content: center;
-	/*margin-top: 15%;*/
 }
 
 .First-screen .div1{	
@@ -254,12 +199,9 @@ border: 4px solid blue;
 	font-size: 1.5em;
 	line-height: 1.5em;
 	color: #000000;
-	/*border: 2px solid red;*/
 }
 
  .div-main1 .div1{
- 	/*height: 84px;*/
- /*	margin-left: 7em;*/
 	margin-left: 35%;
 	margin-top: -10%;
  }
@@ -283,17 +225,11 @@ border: 4px solid blue;
 
 .img1{
 	width: 50%;
-	/*margin-bottom: 30px;*/
 }
 .img3{
-	/*aspect-ratio:390/490;*/
 		width: 100%;
 }
-img{
-		
-/*	width: 100%;
-	margin-top: 30px;*/
-}
+
 .img2{
 	width: 4.05em;
 	 transition:1s;
@@ -308,31 +244,24 @@ img{
 
 
 .Second-screen {
-    height: 47rem;
 	display: flex;
 	flex-direction: column;
     justify-content: center;
-	
 	background-color: #245852;
-	border: 4px solid yellow;
 
 }
 
 .Second-screen nav{
-	width: 100%;
 	display: flex;
 	flex-direction: row;
     justify-content: center;
-/*margin:0 1.5em;*/
-	/*margin-top: 10%;*/
+     margin:0 1.5em;
 }
 .Second-screen .div1{
-	/*max-width: 570px;
-	height: 516px;*/
 	max-width: 28.5em;
 	width: 100%;
 	height: 25.8em;
-	margin-top: 2em 1.5em;
+	margin: 2em 1.5em;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -341,10 +270,9 @@ img{
 }
 .Second-screen .div2{
 	max-width: 44.6em;
-	/*max-width: 892px;*/
 	width: 100%;
 	height: 25.8em;
-	margin:0 1.5em;
+	margin:1em 1.5em 2em;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('img/img-video.png');
@@ -396,55 +324,47 @@ color: #FFFFFF;
 }
 
 .Third-screen{
-	height: 46.1rem;
 	display: flex;
 	flex-direction: column;
    justify-content: center;
-	
-	border: 4px solid blue;
 }
 .Third-screen nav{
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;	
-	margin:0 1.5em;
-	/*border: 4px solid blue;*/
+	margin:0 2em;
 }
 
 .Third-screen .div1{
 	width: 31.9em;
 	height: 28.65em;
-	/*width: 638px;
-	height: 573px;*/
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('img/girlScreen3.png');
+	margin:5em 2em 9em;
+
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: flex-end;
-	border: 4px solid blue;
-
 }
 
 .Third-screen .div2{
-	width: 27em;
-	/*height: 573px;*/
-	height: 27em;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: space-between;
-	margin-left:2em;
-	
+	margin:5em 2em;
+
 }
 
 .div11{
 	width: 14.8em;
+	height: 14.7em;
 	margin-bottom:-3.7em;
 	margin-left:-3em;
-	height: 14.7em;
+
 	background: #FFFFFF;
 	border-radius: 3.72971px;
 	filter: drop-shadow(0px 3.62249px 18.1125px rgba(165, 165, 165, 0.25));	
@@ -453,7 +373,7 @@ color: #FFFFFF;
 	align-items: center;
 	justify-content:space-around;
 	line-height: 0.25em;
-text-align: center;
+
  transition:1s;
 }
 .div11:hover{
@@ -467,41 +387,40 @@ font-style: normal;
 font-weight: 600;
 font-size: 0.7em;
 color: #000000;
-/*line-height: 23px;*/
+
 }
 hr{
 	width: 5.5em;
 	height: 0.1em;
 	background-color: #000000;
 	border:none;
-	/*border: 0.5px solid  #000000;*/
 margin-top:-0.15em;
 }
 .div11 .p2{
 	font-family: Lato;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 0.6rem;
-	/*line-height: 157%;*/
+	font-size: 0.6em;
+	
 }
 .imgFace{
 	width:20%;
 	margin-top: -0.5em;
-	/*line-height: 157%;*/
+	
 }
 ul{
 	font-family: Georgia;
 	font-style: normal;
 	font-weight: bold;
-	font-size: 0.8rem;
-	line-height: 1.3em;
+	font-size: 0.8em;
+	line-height: 1.4em;
 	text-align: left;
 }
 li{
 	font-family: Lato;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 0.55rem;
+	font-size: 0.6em;
 	/*line-height: 157%;*/
 }
 
@@ -510,7 +429,7 @@ li{
 	font-style: normal;
 	font-weight: 600;
 	font-size: 1.25em;
-	margin-top: -0.5em;
+	margin-top: -1em;
 }
 
 .Third-screen .p5{
@@ -583,79 +502,82 @@ footer a{
 	font-size: 2em;
 }
 
-@media (min-width: 768px) and 
- (max-width: 1024px) {
-body{
-		font-size: 18px;
-	}
-	header .div2{
-		background-color: green;
-		}
-		.Second-screen nav{
-		flex-wrap: wrap;
-    	justify-content: space-evenly;
-    	margin-top: 0;
-	}	
-}
 
-@media (min-width: 461px) and (max-width: 768px)
-{
-body{
-		font-size: 15px;
-	}
-
-	header nav{
-		height: 7em;
-		flex-wrap: wrap;
-		flex-direction:column;
-    	justify-content: space-between;
-    	margin-top: 0;
-	}
-	.Second-screen nav{
-		flex-wrap: wrap;
-    	justify-content: space-evenly;
-    	margin-top: 0;
-	}
-		header .div2{
-		background-color: red;
-		}	
-											
-}
 
 @media (min-width: 320px) and
-(max-width: 460px)
+(max-width:1024px)
 {
-	body{
-		font-size: 12px;
-	}
+header nav{
+	height: 6em;
+	align-items:flex-start;
 
+}	
 header .div2{
 		background-color: blue;
+		margin-top: 4em;
+		max-width:100em;
+		width: 100%;
+	}
+	header .div1{
+		margin-top: 1em;
 		
 	}
-	
-	header nav{
-		height: 8em;
-		flex-wrap: wrap;
-		flex-direction:column;
-    	justify-content: space-evenly;
-    	margin-top: 0;
+	header .div3{
+		margin-top: 1em;
+		
 	}
+
 	.navFirstS1{
-		flex-wrap: wrap;
-		/*flex-direction:column;*/
+		/*flex-wrap: wrap;*/
+		flex-direction:column;
     	justify-content: center;
-    	margin-top: 0;
+    	align-items: flex-start;
+    	/*margin-top: 0;*/
 	}
+	
 	.navFirstS2{
 		flex-wrap: wrap;
 		flex-direction:column;
     	justify-content: center;
     	margin-top: 0;
 	}
+	
+	.navFirstS2 .div-main1,.div-main2,.div-main3{
+	height: 15em;
+	width: 100%;
+	display: flex;
+	flex-direction:row;
+	justify-content:space-between;
+}
+.navFirstS2 .img1{
+	width: 5em;
+}
+.navFirstS2 .img3{
+	width: 5em;
+}
+ .div-main1 .div1{
+ 	margin-top:0;
+ 	margin-left:-3rem;
+ }
+ .div-main2 .div1{
+ 		margin-top:0;
+	margin-left:-3rem;
+ }
+ .div-main3 .div1{
+ 		margin-top:0;
+ margin-left:-3rem;
+ }
+.navFirstS2 p{
+	font-family: Lato;
+	font-style: normal;
+	font-size: 1em;
+	color: #424242;
+}
 	.Second-screen nav{
 		flex-wrap: wrap;
+       flex-direction:column;
     	justify-content: space-between;
+    	align-items: center;
     	margin-top: 0;
 	}
 	.Second-screen{
@@ -673,10 +595,41 @@ header .div2{
 
 @media (min-width: 1025px)
 {	
-	
+	header .div2{
+		background-color: magenta;
+		
+	}
 }
 
+@media (min-width: 768px) and 
+ (max-width: 1024px) {
 
+body{
+		font-size: 16px;
+	}
+	header .div2{
+		background-color: red;
+		
+	}
+}
+
+@media (min-width: 461px) and (max-width: 767px)
+{
+body{
+		font-size: 13px;
+	}
+	/*header .div2{
+		background-color: green;
+		
+	}*/	
+											
+}
+@media (min-width: 320px) and
+(max-width: 460px){
+	body{
+		font-size: 12px;
+	}
+}
 
 
 
