--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -2,7 +2,7 @@ body {
 	font-size: 21px;
 
 }
-/*vers4*/
+/*vers5*/
 .wrapper{
 	max-width:75em;
 	width: 100%;
@@ -16,7 +16,7 @@ body {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items:center;
-	margin:0 1em;
+	margin:0 1.5em;
 }
 
 header .div1{
@@ -28,15 +28,13 @@ header .div1{
 	background-image: url('img/logo.png');
 }
 header .div2 {
-	max-width:27.85em;
-	width: 100%;
+	width:27.85em;
 	height: 1.2em;
 	display: flex;
 	justify-content:space-between;
 }
 header .div3{	
-	max-width: 13em;
-	width:100%;
+	width: 13em;
 	height: 1.2em;
 	display: flex;
 	justify-content: space-between;
@@ -134,16 +132,14 @@ header a{
 	flex-direction:rows;
 	align-items: center;
 	justify-content: space-between;
-}
-
-.divFirstS1{
 	font-family: Lato;
 	margin:1.5em 1.5em;
 }
-.divFirstS2{
-	font-family: Lato;
-	margin:1.5em 1.5em;		
+
+.divFirstS1{
+	margin-right: 1.5em;
 }
+
 .First-screen h1{
 	font-family: Georgia;
 	font-style: normal;
@@ -239,7 +235,7 @@ header a{
 	 transition:1s;
 	 transform:scale(1.2);
 	 border-radius: 50%;
-	box-shadow: 0px 0px 1.75em 1.5em  #FFFFFF ; /* #01996D*/
+	box-shadow: 0px 0px 1.75em 1.5em  #FFFFFF ; 
 }
 
 
@@ -272,7 +268,7 @@ header a{
 	max-width: 44.6em;
 	width: 100%;
 	height: 25.8em;
-	margin:1em 1.5em 2em;
+	margin:2.5em 1.5em 3em;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('img/img-video.png');
@@ -331,9 +327,9 @@ color: #FFFFFF;
 .Third-screen nav{
 	display: flex;
 	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;	
-	margin:0 2em;
+	justify-content: space-around;	
+	align-items: flex-start;
+	margin:2em 1.5em 7em;
 }
 
 .Third-screen .div1{
@@ -342,21 +338,19 @@ color: #FFFFFF;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('img/girlScreen3.png');
-	margin:5em 2em 9em;
-
+border-radius: 0.5em;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	justify-content: flex-end;
+	justify-content:flex-end;
+	margin-right: 1.5em;
 }
 
-.Third-screen .div2{
+.Third-screen .div2{	
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
 	justify-content: space-between;
-	margin:5em 2em;
-
+	line-height: 1.5em;
 }
 
 .div11{
@@ -364,7 +358,6 @@ color: #FFFFFF;
 	height: 14.7em;
 	margin-bottom:-3.7em;
 	margin-left:-3em;
-
 	background: #FFFFFF;
 	border-radius: 3.72971px;
 	filter: drop-shadow(0px 3.62249px 18.1125px rgba(165, 165, 165, 0.25));	
@@ -406,6 +399,7 @@ margin-top:-0.15em;
 .imgFace{
 	width:20%;
 	margin-top: -0.5em;
+	border-radius: 50%;
 	
 }
 ul{
@@ -421,7 +415,6 @@ li{
 	font-style: normal;
 	font-weight: normal;
 	font-size: 0.6em;
-	/*line-height: 157%;*/
 }
 
 .Third-screen .p3{
@@ -429,7 +422,6 @@ li{
 	font-style: normal;
 	font-weight: 600;
 	font-size: 1.25em;
-	margin-top: -1em;
 }
 
 .Third-screen .p5{
@@ -447,16 +439,16 @@ li{
 	font-weight: normal;
 	font-size: 1em;
 	line-height: 1.5em;	
+	margin-bottom: 5em;
 	color: #484848;
 }
 
 .buttonFindYour{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 1em 2.5em;
 	width: 11.35em;
 	height: 3.25em;
+	text-align: center;
+	padding: 1em 2.5em;
+	
 	background: #01996D;
 	border: 1px solid #01996D;
 	box-sizing: border-box;
@@ -508,31 +500,35 @@ footer a{
 (max-width:1024px)
 {
 header nav{
-	height: 6em;
-	align-items:flex-start;
+	height: 7em;
+	flex-direction:column;
+	justify-content: flex-start;
+	align-items:center;
 
 }	
-header .div2{
-		background-color: blue;
-		margin-top: 4em;
-		max-width:100em;
-		width: 100%;
+header .div1{
+	margin-top:1em;
+	align-self: flex-start;
 	}
-	header .div1{
-		margin-top: 1em;
-		
+
+header .div2{
+	align-self: center;
+	margin-top: 1.5em;
+	font-size: 1.2em;
+	width: 100%;
+
 	}
 	header .div3{
-		margin-top: 1em;
-		
+	align-self: flex-end;
+	margin-right: 1em;
+	margin-top: -4em;
 	}
 
 	.navFirstS1{
-		/*flex-wrap: wrap;*/
-		flex-direction:column;
+		flex-wrap: wrap;
     	justify-content: center;
     	align-items: flex-start;
-    	/*margin-top: 0;*/
+ 
 	}
 	
 	.navFirstS2{
@@ -575,18 +571,18 @@ header .div2{
 }
 	.Second-screen nav{
 		flex-wrap: wrap;
-       flex-direction:column;
     	justify-content: space-between;
     	align-items: center;
     	margin-top: 0;
 	}
-	.Second-screen{
-		justify-content: space-between;
-	}		
+	.Second-screen div{
+		margin-right:1.5em;
+	}			
 	.Third-screen nav{
 		flex-wrap:wrap;
     	justify-content: center;
-    	margin-top: 0;
+    	margin:2em 2em;
+    
 	}
 	.div11{
 		margin-left:-1.5em;
@@ -595,10 +591,7 @@ header .div2{
 
 @media (min-width: 1025px)
 {	
-	header .div2{
-		background-color: magenta;
-		
-	}
+	
 }
 
 @media (min-width: 768px) and 
@@ -607,10 +600,7 @@ header .div2{
 body{
 		font-size: 16px;
 	}
-	header .div2{
-		background-color: red;
-		
-	}
+
 }
 
 @media (min-width: 461px) and (max-width: 767px)
@@ -618,11 +608,7 @@ body{
 body{
 		font-size: 13px;
 	}
-	/*header .div2{
-		background-color: green;
-		
-	}*/	
-											
+												
 }
 @media (min-width: 320px) and
 (max-width: 460px){
@@ -630,7 +616,12 @@ body{
 		font-size: 12px;
 	}
 }
-
+@media (max-width: 320px) 
+{
+body{
+		font-size: 10px;
+	}
+}
 
 
 
