--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -1,7 +1,33 @@
 body {
 	font-size: 21px;
+  margin: 0;
 
 }
+.preloader{
+  position: fixed;
+  left:0;
+  top:0;
+  right: 0;
+  bottom:0;
+  overflow: hidden;
+  background: white;
+  z-index:100;
+}
+.preloader_image{
+  position: absolute;
+  top:50%;
+  left:50%;
+  width: 400px;
+  height: 400px;
+  margin-top: -200px;
+  margin-left: -200px;
+  background: url('img/prel1.gif') no-repeat 50% 50%;
+  background-size: 400px;
+}
+.loaded .preloader{
+  display: none;
+}
+
 /*vers5*/
 .wrapper{
 	max-width:75em;
@@ -28,28 +54,28 @@ header .div1{
 	background-image: url('img/logo.png');
 }
 header .div2 {
-	width:27.85em;
+	width:24em;
 	height: 1.2em;
 	display: flex;
 	justify-content:space-between;
 }
-header .div3{	
-	width: 13em;
+header .div3{
+	width: 16em;
 	height: 1.2em;
 	display: flex;
 	justify-content: space-between;
 	align-items:center;
-	
+
 }
 header a{
 	font-size: 1em;
 	font-family:Lato;
 	text-decoration: none;
-	color:#292929;	
+	color:#292929;
 }
- .button-trial{
+ .button-trial {
 	display: block;
-	width:9.15em;
+	width:8em;
 	height: 2.55em;
 	padding: 0.65em 0 0.65em;
 	text-align: center;
@@ -58,6 +84,13 @@ header a{
 	box-sizing: border-box;
 	border-radius: 4px;
 	color: #FFFFFF;
+margin:0 5px;
+}
+.printBt{
+	background:white;
+	border: 3px solid #01996D;
+	border-radius: 4px;
+	color:#01996D;
 
 }
 .header-main {
@@ -69,7 +102,7 @@ header a{
  	flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-   	
+
 }
 
 .header-main .text{
@@ -86,17 +119,17 @@ header a{
 }
 .text .p2{
 	font-size: 1em;
-	line-height: 1.55em;	
+	line-height: 1.55em;
 	font-family: Lato;
 	color: #484848;
 	margin-bottom: 3em;
 }
-.buttonFindYour{
+.buttonFindYour, {
 	width: 11.35em;
 	height: 3.25em;
 	text-align: center;
 	padding: 1em 2.5em;
-	
+
 	background: #01996D;
 	border: 1px solid #01996D;
 	box-sizing: border-box;
@@ -114,10 +147,12 @@ header a{
 
 .buttonLetsGet:hover,
 .button-trial:hover,
-.buttonFindYour:hover
+.buttonFindYour:hover,
+.printBt:hover
 {
 	border-color:  #01996D;
-	box-shadow: 0px 0px 1.5em  #01996D;
+	/*box-shadow: 0px 0px 1.5em  #01996D;*/
+	box-shadow:0px 1.5em 1.5em -1em #01996D;
 }
 
 .First-screen{
@@ -138,6 +173,9 @@ header a{
 
 .divFirstS1{
 	margin-right: 1.5em;
+}
+.divFirstS2{
+	margin-top: 3em;
 }
 
 .First-screen h1{
@@ -167,8 +205,8 @@ header a{
 	margin:2em 1.5em;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;	
-	
+	justify-content: space-between;
+
 }
 
 .navFirstS2 .div-main1,.div-main2,.div-main3{
@@ -188,7 +226,7 @@ header a{
 	justify-content: center;
 }
 
-.First-screen .div1{	
+.First-screen .div1{
 	font-family: Georgia;
 	font-style: normal;
 	font-weight: bold;
@@ -235,7 +273,7 @@ header a{
 	 transition:1s;
 	 transform:scale(1.2);
 	 border-radius: 50%;
-	box-shadow: 0px 0px 1.75em 1.5em  #FFFFFF ; 
+	box-shadow: 0px 0px 1.75em 1.5em  #FFFFFF ;
 }
 
 
@@ -302,7 +340,7 @@ header a{
 .Second-screen a{
 	text-decoration:none;
 }
- .buttonLetsGet{	
+ .buttonLetsGet{
 	padding: 1em 2.5em;
 	text-align: center;
 	width: 12em;
@@ -328,7 +366,7 @@ color: #FFFFFF;
 .Third-screen nav{
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;	
+	justify-content: space-around;
 	align-items: flex-start;
 	margin:2em 1.5em 7em;
 }
@@ -347,7 +385,7 @@ color: #FFFFFF;
 	margin-right: 1.5em;
 }
 
-.Third-screen .div2{	
+.Third-screen .div2{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -361,7 +399,7 @@ color: #FFFFFF;
 	margin-left:-3em;
 	background: #FFFFFF;
 	border-radius: 3.72971px;
-	filter: drop-shadow(0px 3.62249px 18.1125px rgba(165, 165, 165, 0.25));	
+	filter: drop-shadow(0px 3.62249px 18.1125px rgba(165, 165, 165, 0.25));
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -395,13 +433,13 @@ margin-top:-0.15em;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 0.6em;
-	
+
 }
 .imgFace{
 	width:20%;
 	margin-top: -0.5em;
 	border-radius: 50%;
-	
+
 }
 ul{
 	font-family: Georgia;
@@ -439,7 +477,7 @@ li{
 	font-style: normal;
 	font-weight: normal;
 	font-size: 1em;
-	line-height: 1.5em;	
+	line-height: 1.5em;
 	margin-bottom: 5em;
 	color: #484848;
 }
@@ -454,7 +492,7 @@ footer{
 footer nav{
 	display: flex;
 	justify-content: flex-start;
-	align-items:center;	
+	align-items:center;
 	margin:0 1.5em;
 }
 footer div {
@@ -466,7 +504,7 @@ footer div {
 }
 footer a{
 	font-family: Lato;
-	font-size: 1.25em;	
+	font-size: 1.25em;
 	color: #FFFFFF;
 	text-decoration: none;
 }
@@ -486,7 +524,7 @@ header nav{
 	justify-content: flex-start;
 	align-items:center;
 
-}	
+}
 header .div1{
 	margin-top:1em;
 	align-self: flex-start;
@@ -510,16 +548,16 @@ header .div2{
 		flex-wrap: wrap;
     	justify-content: center;
     	align-items: flex-start;
- 
+
 	}
-	
+
 	.navFirstS2{
 		flex-wrap: wrap;
 		flex-direction:column;
     	justify-content: center;
     	margin-top: 0;
 	}
-	
+
 	.navFirstS2 .div-main1,.div-main2,.div-main3{
 	height: 15em;
 	width: 100%;
@@ -560,12 +598,12 @@ header .div2{
 	}
 	.Second-screen div{
 		margin-right:1.5em;
-	}			
+	}
 	.Third-screen nav{
 		flex-wrap:wrap;
     	justify-content: center;
     	margin:3em 2em;
-    
+
 	}
 	.Third-screen .p4{
 		margin-bottom: 3em;
@@ -576,11 +614,11 @@ header .div2{
 }
 
 @media (min-width: 1025px)
-{	
-	
+{
+
 }
 
-@media (min-width: 768px) and 
+@media (min-width: 768px) and
  (max-width: 1024px) {
 
 body{
@@ -594,7 +632,7 @@ body{
 body{
 		font-size: 13px;
 	}
-												
+
 }
 @media (min-width: 320px) and
 (max-width: 460px){
@@ -602,15 +640,9 @@ body{
 		font-size: 12px;
 	}
 }
-@media (max-width: 320px) 
+@media (max-width: 320px)
 {
 body{
 		font-size: 10px;
 	}
 }
-
-
-
-
-
-
