--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-base: Inter, Helvetica Neue, Helvetica, Arial, sans-serif;
+  /*background-image: radial-gradient(circle, #bbc4f3, #e8f5e7, #f3cdf0);*/
 }
 
 /*.container{*/
@@ -27,41 +28,47 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  /*justify-content: space-evenly;*/
   width: 210mm;
   height: 297mm;
   margin: auto; /* для центровки страницы */
-
+  border: 1px solid #b67df5;
+  border-radius: 9px;
+  box-shadow: 0 0 20px #ad70ef;
   /*page-break-after: always;*/
   /*width: 80%;*/
   /*margin: 20px 0;*/
   /*background-color: #f3d0ef;*/
   /*padding: 20px;*/
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
   /*font-family: "JetBrains Mono Light";*/
   /*font-family: Open Sans, Helvetica, Arial, sans-serif;;*/
   font-size: 18px;
   line-height: 20px;
 }
 
-/*.header {*/
-/*  display: flex;*/
-/*  align-items: center;*/
-/*  !*background-color: #e0f7fa;*!*/
-/*  font-family: Roboto, Arial, sans-serif;*/
-/*  font-size: 20px;*/
-/*  background-color: #2AA5A0;*/
-/*  background-image: linear-gradient(90deg, #E3535D, #2AA5A0);*/
-/*  -webkit-background-clip: text;*/
-/*  -webkit-text-fill-color: transparent;*/
-/*  padding: 20px;*/
-/*  border-radius: 2%;*/
-/*  box-shadow: 0 0 10px rgba(0.1, 0, 0, 0.1);*/
-/*}*/
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  /*background-color: #e0f7fa;*/
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 20px;
+  background-color: #2AA5A0;
+  background-image: linear-gradient(90deg, #E3535D, #2AA5A0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding: 20px;
+  border-radius: 2%;
+  box-shadow: 0 0 10px rgba(0.1, 0, 0, 0.1);
+}
 img {
-  /*border-radius: 5%;*/
-  width: 98%;
-  height: 300px;
-  padding-top: 15px;
+  border-radius: 50%;
+  width:50mm;
+  /*width: 98%;*/
+  /*height: 130mm;*/
+  /*padding-top: 15px;*/
   /*margin-right: 120px;*/
   /*margin-left: 40px;*/
   box-shadow: 0 0 12px #f3d0ef;
@@ -70,14 +77,18 @@ img {
 
 .content {
   display: flex;
-  gap: 1%;
+  height: 100%;
+  /*gap: 1%;*/
+  /*border-bottom: 2px solid chocolate  ;*/
+  /*padding: 0px;*/
+  /*margin: 0px;*/
   /*margin-top: 20px;*/
 }
 
 .column1 {
   width: 40%;
   background-image: radial-gradient(circle, #bbc4f3, #e8f5e7, #f3cdf0);
-  /*border-radius: 5%;;*/
+  /*border-radius: 15%;*/
 }
 
 .column2 {
@@ -95,9 +106,9 @@ img {
 h1{
   color: darkslateblue;
 }
- h2 {
+h2 {
   border-bottom: 2px solid #483D8BFF;
-   color: darkslateblue;
+  color: darkslateblue;
   padding-bottom: 10px;
   /*margin-bottom: 10px;*/
   font-size: 1.5em;
