--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -43,8 +43,8 @@ li {
   /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
   /*font-family: "JetBrains Mono Light";*/
   /*font-family: Open Sans, Helvetica, Arial, sans-serif;;*/
-  font-size: 18px;
-  line-height: 20px;
+  font-size: 1.12em;
+  line-height: 1.25em;
 }
 
 .header {
@@ -54,18 +54,18 @@ li {
   align-items: center;
   /*background-color: #e0f7fa;*/
   font-family: Roboto, Arial, sans-serif;
-  font-size: 20px;
+  /*font-size: 1.12em;*/
   background-image: linear-gradient(90deg, rgba(58, 86, 234, 0.49), rgba(30, 103, 23, 0.34), rgba(239, 104, 229, 0.63));
   background-color: #2AA5A0;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  padding: 20px;
+  padding: 1.25em;
   border-radius: 2%;
   box-shadow: 0 0 10px rgba(0.1, 0, 0, 0.1);
 }
 img {
   border-radius: 50%;
-  width:50mm;
+  width:12em;
   /*width: 98%;*/
   /*height: 130mm;*/
   /*padding-top: 15px;*/
@@ -97,13 +97,20 @@ img {
   /*border-radius: 5%;*/
 }
 .section {
+  display: flex;
+  flex-direction: column;
   /*background-color: #bed93d;*/
   padding-left: 15px;
   padding-right: 10px;
   /*border-radius: 5px;*/
   /*border-bottom: 2px solid #555555;*/
 }
+.section-header{
+  display: flex;
+  flex-direction: column;
+}
 h1{
+  font-size:1.8em ;
   color: darkslateblue;
 }
 h2 {
@@ -111,12 +118,13 @@ h2 {
   color: darkslateblue;
   padding-bottom: 10px;
   /*margin-bottom: 10px;*/
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 h3{
   color: darkslateblue;
-  padding: 0;
+  padding-top: -1em;
   margin: 0;
+  font-size:1.1em ;
 }
 .section ul {
   list-style: none;
@@ -124,8 +132,8 @@ h3{
 }
 
 .section ul li {
-  margin: 10px 0;
-  line-height: 20px;
+  margin: 0.625em 0;
+  line-height: 1.25em;
 }
 
 /*.footer {*/
@@ -140,17 +148,20 @@ h3{
 /*}*/
 .icon-section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-around;
+  font-size: 0.8em;
 }
 
 .icon-section img {
-  width: 24px;
-  height: 24px;
+  width:1.5em;
+  height: 1.5em;
 }
-@media (min-width: 320px) and
-(max-width:1024px){
-  .container{
-    width: 100%;
-  }
-}
+/*@media (min-width: 120px) and*/
+/*(max-width:1024px){*/
+/*  .container{*/
+/*    width: 100%;*/
+/*    font-size: 0.8em;*/
+/*  }*/
+
+/*}*/
