--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -87,7 +87,7 @@ img {
 
 .column1 {
   width: 40%;
-  background-image: radial-gradient( circle, #bbc4f3, #e8f5e7, #f3cdf0);
+  background-image: radial-gradient( circle, #d6dbf6, #f2faf2, #f3dbf1);
   /*border-radius: 15%;*/
 }
 
