--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -2,24 +2,15 @@
   margin: 0;
   padding: 0;
   font-base: Inter, Helvetica Neue, Helvetica, Arial, sans-serif;
-  /*background-image: radial-gradient(circle, #bbc4f3, #e8f5e7, #f3cdf0);*/
-}
 
-/*.container{*/
-/*  display: flex;*/
-/*  flex-direction: column ;*/
-/*  !*align-items: stretch;*!*/
-/*  !*box-shadow: 0 0 10px rgba(0.1, 0, 0, 0.1);*!*/
-/*}*/
-/*.header,.content,.footer{*/
-/*  margin:10px;*/
-/*}*/
-/*h1{*/
-/*  !*font-family: Bahnschrift;*!*/
-/*}*/
-/*h2{*/
-/*  !*font-family: Bahnschrift, "Segoe Print";*!*/
-/*}*/
+}
+.fon{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+  background: radial-gradient(circle, #bbc4f3, #e8f5e7, #f3cdf0);
+}
 li {
   display: block;
 }
@@ -30,11 +21,11 @@ li {
   justify-content: space-around;
   /*justify-content: space-evenly;*/
   width: 50rem;
-  height: 70rem;
-  margin: auto; /* для центровки страницы */
-  border: 1px solid #b67df5;
-  border-radius: 9px;
-  box-shadow: 0 0 20px #ad70ef;
+  height: 69rem;
+  margin: 0.5rem 0.5rem; /* для центровки страницы */
+  /*border: 1px solid #b67df5;*/
+  /*border-radius: 0.5rem;*/
+  box-shadow: 0 0 0.7rem #c76de0;
   /*page-break-after: always;*/
   /*width: 80%;*/
   /*margin: 20px 0;*/
@@ -52,47 +43,47 @@ li {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  /*width: 100%;*/
   /*background-color: #e0f7fa;*/
   font-family: Roboto, Arial, sans-serif;
   /*font-size: 1.12em;*/
-  background-image: linear-gradient(90deg, rgba(58, 86, 234, 0.49), rgba(30, 103, 23, 0.34), rgba(239, 104, 229, 0.63));
+  background-image: linear-gradient(90deg, rgba(6, 23, 112, 0.49), rgba(166, 6, 154, 0.63));
   background-color: #2AA5A0;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   padding: 1.25rem;
-  border-radius: 2%;
-  box-shadow: 0 0 10px rgba(0.1, 0, 0, 0.1);
+  /*border-radius: 2%;*/
+  /*box-shadow: 0 0 0.7rem #c76de0;*/
+  /*box-shadow: 0 0 0.7rem rgba(0.1, 0, 0, 0.1);*/
 }
 img {
   border-radius: 50%;
-  width:12rem;
-  /*width: 98%;*/
-  /*height: 130mm;*/
-  /*padding-top: 15px;*/
-  /*margin-right: 120px;*/
-  /*margin-left: 40px;*/
-  box-shadow: 0 0 12px #f3d0ef;
+  width:12.5rem;
+  box-shadow: 0 0 0.3rem #8fe6ee;
 }
-
 
 .content {
   display: flex;
   height: 100%;
   /*gap: 1%;*/
   /*border-bottom: 2px solid chocolate  ;*/
-  /*padding: 0px;*/
-  /*margin: 0px;*/
+  padding: 0;
+  /*margin-bottom: -1rem;*/
   /*margin-top: 20px;*/
 }
 
 .column1 {
   width: 40%;
-  background-image: radial-gradient( circle, #d6dbf6, #f2faf2, #f3dbf1);
+  height: 100%;
+  /*margin-bottom:0.2rem;*/
+  background-image: radial-gradient( circle, #eaeefc, #eff8ef, rgba(246, 230, 244, 0.98));
   /*border-radius: 15%;*/
 }
 
 .column2 {
-  width: 59%;
+  width: 60%;
+  height: 100%;
+  background-image: radial-gradient( #f7f7fa, #fcfdfc, #f6f3f6);
   /*background: #e8f5e7;*/
   /*border-radius: 5%;*/
 }
@@ -100,8 +91,8 @@ img {
   display: flex;
   flex-direction: column;
   /*background-color: #bed93d;*/
-  padding-left: 15px;
-  padding-right: 10px;
+  padding-left: 1rem;
+  padding-right: 1rem;
   /*border-radius: 5px;*/
   /*border-bottom: 2px solid #555555;*/
 }
@@ -116,13 +107,14 @@ h1{
 h2 {
   border-bottom: 2px solid #483D8BFF;
   color: darkslateblue;
-  padding-bottom: 10px;
-  /*margin-bottom: 10px;*/
+  padding-bottom: 0.5rem;
+  padding-top: -1rem;
+  margin-bottom: 10px;
   font-size: 1.3rem;
 }
 h3{
   color: darkslateblue;
-  padding-top: -1em;
+  /*padding-top: -1rem;*/
   margin: 0;
   font-size:1.1rem ;
 }
@@ -135,27 +127,20 @@ h3{
   margin: 0.625rem 0;
   line-height: 1.25rem;
 }
+dt{
+  margin-top: 0.5rem;
+}
 
-/*.footer {*/
-/*  !*margin: 20px 0;*!*/
-/*  display: flex;*/
-/*  flex-direction: row ;*/
-/*  justify-content: space-around;*/
-/*  background-color: #e0f7fa;*/
-/*  padding: 10px;*/
-/*  border-radius: 2%;*/
-/*  box-shadow: 0 0 10px rgba(0.1, 0, 0, 0.1);*/
-/*}*/
 .icon-section {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  font-size: 0.8em;
+  font-size: 0.8rem;
 }
 
 .icon-section img {
-  width:1.5rem;
-  height: 1.5rem;
+  width:1.4rem;
+  height: 1.4rem;
 }
 /*@media (min-width: 120px) and*/
 /*(max-width:1024px){*/
