--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -1,98 +1,106 @@
 @media body {
   margin: 0;
   padding: 0;
-  font-base: Inter, Helvetica Neue, Helvetica, Arial, sans-serif;
 
+
+}
+.wrapper{
+  max-width:75rem;
+  width: 100%;
+  margin: 0 auto;
+  font-weight: 200;
+  font-family: "Times New Roman", serif;
+font-stretch: expanded;
 }
 .fon{
   width: 100%;
   display: flex;
   justify-content: center;
-
   background: radial-gradient(circle, #bbc4f3, #e8f5e7, #f3cdf0);
 }
-li {
-  display: block;
-}
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  /*justify-content: space-evenly;*/
-  width: 50rem;
-  height: 69rem;
-  margin: 0.5rem 0.5rem; /* для центровки страницы */
-  /*border: 1px solid #b67df5;*/
-  /*border-radius: 0.5rem;*/
-  box-shadow: 0 0 0.7rem #c76de0;
-  /*page-break-after: always;*/
-  /*width: 80%;*/
-  /*margin: 20px 0;*/
-  /*background-color: #f3d0ef;*/
-  /*padding: 20px;*/
-  /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
-  /*font-family: "JetBrains Mono Light";*/
-  /*font-family: Open Sans, Helvetica, Arial, sans-serif;;*/
-  font-size: 1.12rem;
-  line-height: 1.25rem;
-}
-
-.header {
+.block {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
-  /*width: 100%;*/
-  /*background-color: #e0f7fa;*/
-  font-family: Roboto, Arial, sans-serif;
-  /*font-size: 1.12em;*/
-  background-image: linear-gradient(90deg, rgba(6, 23, 112, 0.49), rgba(166, 6, 154, 0.63));
-  background-color: #2AA5A0;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  padding: 1.25rem;
-  /*border-radius: 2%;*/
-  /*box-shadow: 0 0 0.7rem #c76de0;*/
-  /*box-shadow: 0 0 0.7rem rgba(0.1, 0, 0, 0.1);*/
+  width: 50rem;
+  height: 69rem;
+  margin: 1rem auto; /* для центровки страницы */
+  font-size: 1.12rem;
+  line-height: 1.25rem;
 }
-img {
-  border-radius: 50%;
-  width:12.5rem;
-  box-shadow: 0 0 0.3rem #8fe6ee;
-}
-
-.content {
+.block1{
+  width: 100%;
   display: flex;
-  height: 100%;
-  /*gap: 1%;*/
-  /*border-bottom: 2px solid chocolate  ;*/
-  padding: 0;
-  /*margin-bottom: -1rem;*/
-  /*margin-top: 20px;*/
+  flex-direction: column;
+  background-color: #f8f6f7;
+}
+.block11 {
+  width: 100%;
+  height: 35%;
+}
+.block12{
+  width: 100%;
+  height: 65%;
+  display: flex;
+  flex-direction: row;
+}
+.block13 {
+  width: 25rem;
+  height: 25rem;
+  position: absolute;
+  z-index: 5;
+  margin-top: 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #d5becc;
+}
+.titName{
+  margin-top: 5rem;
+  margin-left: 5rem;
+}
+.tit1{
+  width:35% ;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  /*padding: 1rem;*/
+  background-color: #f8eaf3;
+}
+.tit2{
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #f8f6f7;
+
 }
 
 .column1 {
-  width: 40%;
+  width: 35%;
   height: 100%;
+  background-color: #f8eaf3;
   /*margin-bottom:0.2rem;*/
-  background-image: radial-gradient( circle, #eaeefc, #eff8ef, rgba(246, 230, 244, 0.98));
+  /*background-image: radial-gradient( circle, #eaeefc, #eff8ef, rgba(246, 230, 244, 0.98));*/
   /*border-radius: 15%;*/
 }
 
 .column2 {
-  width: 60%;
+  width: 65%;
   height: 100%;
-  background-image: radial-gradient( #f7f7fa, #fcfdfc, #f6f3f6);
-  /*background: #e8f5e7;*/
+  /*background-image: radial-gradient( #f7f7fa, #fcfdfc, #f6f3f6);*/
+  background: #f8f6f7;
   /*border-radius: 5%;*/
 }
 .section {
   display: flex;
   flex-direction: column;
+  padding: 1rem;
   /*background-color: #bed93d;*/
-  padding-left: 1rem;
-  padding-right: 1rem;
+  /*padding-left: 1rem;*/
+  /*padding-right: 1rem;*/
   /*border-radius: 5px;*/
   /*border-bottom: 2px solid #555555;*/
 }
@@ -102,51 +110,93 @@ img {
 }
 h1{
   font-size:1.8rem ;
+  letter-spacing: .2rem;
   color: darkslateblue;
 }
 h2 {
   border-bottom: 2px solid #483D8BFF;
   color: darkslateblue;
-  padding-bottom: 0.5rem;
-  padding-top: -1rem;
-  margin-bottom: 10px;
-  font-size: 1.3rem;
+  letter-spacing: 0.1rem;
+  /*padding-bottom: 0.1rem;*/
+  /*padding: -1rem;*/
+  /*margin-bottom: 0.5rem;*/
+  font-size: 1.1rem;
 }
 h3{
   color: darkslateblue;
-  /*padding-top: -1rem;*/
+  /*padding-top: 1rem;*/
   margin: 0;
   font-size:1.1rem ;
 }
+
+img {
+  border-radius: 50%;
+  width:12.5rem;
+  background-color: #f8f6f7;
+}
+
 .section ul {
   list-style: none;
   padding: 0;
 }
-
+ul{
+  padding: -1rem;
+}
 .section ul li {
-  margin: 0.625rem 0;
-  line-height: 1.25rem;
+  /*margin: 0.625rem 0;*/
+  /*line-height: 1.25rem;*/
 }
 dt{
-  margin-top: 0.5rem;
+  margin-top: 0.1rem;
 }
 
 .icon-section {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   font-size: 0.8rem;
+  background-image: linear-gradient(90deg, rgba(6, 23, 112, 0.49), rgba(166, 6, 154, 0.63));
+  background-color: #2AA5A0;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .icon-section img {
   width:1.4rem;
   height: 1.4rem;
 }
-/*@media (min-width: 120px) and*/
-/*(max-width:1024px){*/
-/*  .container{*/
-/*    width: 100%;*/
-/*    font-size: 0.8em;*/
-/*  }
+/*.header {*/
+/*  display: flex;*/
+/*  flex-direction: row;*/
+/*  justify-content: space-around;*/
+/*  align-items: center;*/
+/*  !*width: 100%;*!*/
+/*  !*background-color: #e0f7fa;*!*/
+/*  font-family: Roboto, Arial, sans-serif;*/
+/*  !*font-size: 1.12em;*!*/
+/*  background-image: linear-gradient(90deg, rgba(6, 23, 112, 0.49), rgba(166, 6, 154, 0.63));*/
+/*  background-color: #2AA5A0;*/
+/*  -webkit-background-clip: text;*/
+/*  -webkit-text-fill-color: transparent;*/
+/*  padding: 1rem;*/
+/*  !*border-radius: 2%;*!*/
+/*  !*box-shadow: 0 0 0.7rem #c76de0;*!*/
+/*  !*box-shadow: 0 0 0.7rem rgba(0.1, 0, 0, 0.1);*!*/
+/*}*/
+/*.content {*/
+/*  display: flex;*/
+/*  height: 100%;*/
+/*  !*gap: 1%;*!*/
+/*  !*border-bottom: 2px solid chocolate  ;*!*/
+/*  padding: 0;*/
+/*  !*margin-bottom: -1rem;*!*/
+/*  !*margin-top: 20px;*!*/
+/*}*/
+@media (min-width: 120px) and
+(max-width:1024px){
+  .container{
+    width: 100%;
+    font-size: 0.8em;
+  }
 
 }
