--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -26,7 +26,7 @@ font-stretch: expanded;
   width: 50rem;
   height: 69rem;
   margin: 1rem auto; /* для центровки страницы */
-  font-size: 1.12rem;
+  font-size: 1.1rem;
   line-height: 1.25rem;
 }
 .block1{
@@ -55,7 +55,7 @@ font-stretch: expanded;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #d5becc;
+  background-color: #ecd1e0;
 }
 .titName{
   margin-top: 5rem;
@@ -115,18 +115,18 @@ h1{
 }
 h2 {
   border-bottom: 2px solid #483D8BFF;
-  color: darkslateblue;
+  color: #34224f;
   letter-spacing: 0.1rem;
-  /*padding-bottom: 0.1rem;*/
+  margin-bottom: -.5rem;
   /*padding: -1rem;*/
   /*margin-bottom: 0.5rem;*/
-  font-size: 1.1rem;
+  font-size: 1.2rem;
 }
 h3{
   color: darkslateblue;
-  /*padding-top: 1rem;*/
+  /*padding-top: -1rem;*/
   margin: 0;
-  font-size:1.1rem ;
+  font-size:1.2rem ;
 }
 
 img {
@@ -140,11 +140,14 @@ img {
   padding: 0;
 }
 ul{
-  padding: -1rem;
+  /*padding: -1rem;*/
 }
 .section ul li {
   /*margin: 0.625rem 0;*/
   /*line-height: 1.25rem;*/
+}
+li{
+  margin-bottom: 0.5rem;
 }
 dt{
   margin-top: 0.1rem;
@@ -159,6 +162,7 @@ dt{
   background-color: #2AA5A0;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin-top: -2rem;
 }
 
 .icon-section img {
