--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -126,6 +126,7 @@
     width: 35%;
     height: 100%;
     background-color: #f8eaf3;
+
     /*padding-bottom: .5rem;*/
     /*margin-bottom:0.2rem;*/
     /*background-image: radial-gradient( circle, #eaeefc, #eff8ef, rgba(246, 230, 244, 0.98));*/
@@ -191,17 +192,49 @@ img {
     border-radius: 0;
 }
 
-.section ul  {
+.section ul {
     list-style: none;
     padding: 0;
 }
 
-ul {
-
-    /*padding: -1rem;*/
+.skala {
+    display: flex;
+    flex-direction: row;
+    /*justify-content: space-around;*/
+    /*justify-items: center;*/
 }
 
-.section  li {
+.skala1 {
+    width: 30%;
+}
+
+.skala2 {
+    width: 70%;
+    height: 1.2rem;
+    display: flex;
+    justify-content: end;
+    /*justify-items: center;*/
+    align-items: center;
+    /*background: linear-gradient(to right, red, purple);*/
+    /*border: 0.1rem dotted #26069d;*/
+    /*background: rgb(2, 0, 36);*/
+    /*border-radius: 0.5rem;*/
+    /*border-bottom-right-radius: 0.3rem;*/
+    background: linear-gradient(90deg, rgb(200, 220, 255) 0%,
+    rgb(200, 176, 255) 20%,
+    rgb(200, 132, 255) 40%,
+    rgb(200, 88, 255) 60%,
+    rgb(178, 62, 210) 80%,
+    rgb(119, 3, 190) 100%);
+    /*background-image: linear-gradient(#4f74f6, #3ee03e, rgb(236, 20, 200));*/
+
+}
+.skala3{
+    margin-right: 0.05rem;
+    height: 90%;
+    /*border-bottom-right-radius: 0.3rem;*/
+}
+.section li {
     margin-bottom: 0.3rem;
     /*margin: 0.625rem 0;*/
     /*line-height: 1.25rem;*/
@@ -220,13 +253,6 @@ dt {
     list-style: disc;
     margin-left: 1rem;
     /*margin-top: -0.5rem;*/
-}
-
-.column2 li {
-    /*text-indent: 1rem;*/
-    /*padding-right: 0.5rem;*/
-    /*color: #2c055d*/
-
 }
 
 .column2 h4 {
@@ -249,6 +275,7 @@ dt {
 a {
     color: #34224f;
     font-size: 0.9rem;
+
 }
 
 .icon-section img {
@@ -256,33 +283,7 @@ a {
     height: 1.4rem;
 }
 
-/*.header {*/
-/*  display: flex;*/
-/*  flex-direction: row;*/
-/*  justify-content: space-around;*/
-/*  align-items: center;*/
-/*  !*width: 100%;*!*/
-/*  !*background-color: #e0f7fa;*!*/
-/*  font-family: Roboto, Arial, sans-serif;*/
-/*  !*font-size: 1.12em;*!*/
-/*  background-image: linear-gradient(90deg, rgba(6, 23, 112, 0.49), rgba(166, 6, 154, 0.63));*/
-/*  background-color: #2AA5A0;*/
-/*  -webkit-background-clip: text;*/
-/*  -webkit-text-fill-color: transparent;*/
-/*  padding: 1rem;*/
-/*  !*border-radius: 2%;*!*/
-/*  !*box-shadow: 0 0 0.7rem #c76de0;*!*/
-/*  !*box-shadow: 0 0 0.7rem rgba(0.1, 0, 0, 0.1);*!*/
-/*}*/
-/*.content {*/
-/*  display: flex;*/
-/*  height: 100%;*/
-/*  !*gap: 1%;*!*/
-/*  !*border-bottom: 2px solid chocolate  ;*!*/
-/*  padding: 0;*/
-/*  !*margin-bottom: -1rem;*!*/
-/*  !*margin-top: 20px;*!*/
-/*}*/
+
 @media (min-width: 120px) and
 (max-width: 1024px) {
     .container {
