--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -168,6 +168,7 @@ h2 {
     border-bottom: 2px solid #34224f;
     color: #34224f;
     letter-spacing: 0.1rem;
+
     margin-bottom: -.5rem;
     /*padding: -1rem;*/
     /*margin-bottom: 0.5rem;*/
@@ -206,6 +207,7 @@ img {
 
 .skala1 {
     width: 30%;
+    margin-right: 0.3rem;
 }
 
 .skala2 {
@@ -234,6 +236,15 @@ img {
     height: 90%;
     /*border-bottom-right-radius: 0.3rem;*/
 }
+.sprache{
+    display: flex;
+    flex-direction: row;
+    justify-items: stretch;
+}
+.sprache2{
+margin-left: 0.8rem;
+}
+
 .section li {
     margin-bottom: 0.3rem;
     /*margin: 0.625rem 0;*/
@@ -277,7 +288,9 @@ a {
     font-size: 0.9rem;
 
 }
-
+.span{
+    font-size: 1rem;
+}
 .icon-section img {
     width: 1.4rem;
     height: 1.4rem;
